--- a/apps/web/src/i18n/locales/cs.json
+++ b/apps/web/src/i18n/locales/cs.json
@@ -234,11 +234,22 @@
     "required": "povinné"
   },
   "nav": {
-    "browse": "Procházet",
+    "browse": "Procházet Civitai",
     "packs": "Packy",
-    "inventory": "Inventář modelů",
+    "inventory": "Inventář",
     "profiles": "Profily",
-    "settings": "Nastavení"
+    "settings": "Nastavení",
+    "downloads": "Stahování"
+  },
+  "header": {
+    "tagline": "Správce modelů založený na packách",
+    "nsfw": "NSFW"
+  },
+  "sidebar": {
+    "expandSidebar": "Rozbalit postranní panel",
+    "collapseSidebar": "Sbalit postranní panel",
+    "allSystemsReady": "Vše připraveno",
+    "disconnected": "Odpojeno"
   },
   "errors": {
     "loadFailed": "Nepodařilo se načíst",
@@ -246,5 +257,429 @@
     "deleteFailed": "Nepodařilo se smazat",
     "networkError": "Chyba sítě",
     "notFound": "Nenalezeno"
+  },
+  "import": {
+    "title": "Importovat do packu",
+    "packDetails": "Detaily packu",
+    "packName": "Název packu",
+    "customNameHint": "Vlastní název bude použit pro pack",
+    "description": "Popis",
+    "selectVersions": "Vybrat verze",
+    "selectAll": "Vybrat vše",
+    "deselectAll": "Zrušit výběr",
+    "downloads": "{{num}} stažení",
+    "downloadOptions": "Možnosti stahování",
+    "downloadImages": "Stáhnout obrázky",
+    "downloadImagesDesc": "Uložit náhledové obrázky (.jpg, .png)",
+    "downloadVideos": "Stáhnout videa",
+    "downloadVideosDesc": "Uložit náhledová videa (.mp4)",
+    "includeNsfw": "Zahrnout NSFW",
+    "includeNsfwDesc": "Stáhnout obsah pro dospělé",
+    "downloadAllVersions": "Stáhnout ze všech verzí",
+    "downloadAllVersionsDesc": "Získat náhledy ze všech {{count}} verzí",
+    "downloadSelectedVersionsDesc": "Získat náhledy pouze z {{count}} vybraných verzí",
+    "downloadSummary": "Shrnutí stahování",
+    "estimatedTotal": "Odhadovaná velikost",
+    "images": "Obrázky",
+    "videos": "Videa",
+    "noPreviewsWarning": "S aktuálním nastavením se nestáhnou žádné náhledy",
+    "packThumbnail": "Miniatura packu",
+    "selectThumbnail": "Vyberte náhledový obrázek jako miniaturu packu",
+    "versionsCount": "{{count}} verze",
+    "previewsCount": "{{count}} náhledů",
+    "selectVersionWarning": "Vyberte alespoň jednu verzi k importu",
+    "cancel": "Zrušit",
+    "importing": "Importování...",
+    "importPack": "Importovat pack"
+  },
+  "browse": {
+    "title": "Procházet Civitai",
+    "subtitle": "Vyhledávejte a importujte modely. Použijte <code>tag:</code> pro tagy.",
+    "searchPlaceholder": "Hledat modely... (tag:anime, url:civitai.com/...)",
+    "search": "Hledat",
+    "loading": "Vyhledávání modelů...",
+    "loadingModel": "Načítání modelu...",
+    "connectingTo": "Připojování k {{provider}}",
+    "noResults": "Žádné modely nenalezeny pro \"{{query}}\"",
+    "loadMore": "Načíst další ({{count}} načteno)",
+    "modelNotFound": "Model nenalezen",
+    "copiedToClipboard": "Zkopírováno do schránky",
+    "importSuccess": "Úspěšně importováno '{{name}}'",
+    "importFailed": "Import selhal",
+    "zoom": {
+      "smaller": "Menší karty",
+      "larger": "Větší karty"
+    },
+    "types": {
+      "all": "Všechny typy",
+      "lora": "LoRA",
+      "checkpoint": "Checkpoint",
+      "embedding": "Embedding",
+      "vae": "VAE",
+      "controlnet": "ControlNet",
+      "upscaler": "Upscaler"
+    },
+    "modal": {
+      "importToPack": "Importovat do packu...",
+      "previewImages": "Náhledy ({{count}})",
+      "usageTips": "Tipy pro použití",
+      "triggerWords": "Spouštěcí slova",
+      "versions": "Verze ({{count}})",
+      "description": "Popis",
+      "tags": "Tagy",
+      "downloads": "{{num}} stažení",
+      "ratings": "{{rating}} ({{num}} hodnocení)",
+      "viewOnCivitai": "Zobrazit na Civitai",
+      "latest": "Nejnovější"
+    },
+    "params": {
+      "clipSkip": "Clip Skip",
+      "strength": "Síla",
+      "cfgScale": "CFG Scale",
+      "steps": "Kroky",
+      "sampler": "Sampler"
+    }
+  },
+  "settings": {
+    "title": "Nastavení",
+    "subtitle": "Konfigurace Synapse a diagnostika",
+    "display": {
+      "title": "Zobrazení",
+      "subtitle": "Předvolby uživatelského rozhraní",
+      "nsfwBlur": "Rozmazání NSFW",
+      "nsfwBlurDesc": "Rozmazat NSFW náhledy ve výchozím nastavení"
+    },
+    "language": {
+      "title": "Jazyk",
+      "subtitle": "Změny se projeví okamžitě bez restartu."
+    },
+    "paths": {
+      "title": "Cesty",
+      "subtitle": "Konfigurace umístění úložiště dat",
+      "synapseData": "Cesta k datům Synapse",
+      "synapseDataDesc": "Pouze pro čtení. Packy a registr jsou uloženy zde."
+    },
+    "backup": {
+      "title": "Záložní úložiště",
+      "subtitle": "Konfigurace externího záložního úložiště pro modely",
+      "enable": "Povolit záložní úložiště",
+      "enableDesc": "Ukládat kopie modelů na externí disk (USB, NAS, síťový disk)",
+      "path": "Kořenová cesta zálohy",
+      "pathPlaceholder": "/mnt/usb/moje-zaloha nebo /run/media/user/DISK nebo D:\\Zaloha",
+      "pathDesc": "Kořenová složka na externím disku. Synapse vytvoří /.synapse/store/data/blobs/ uvnitř.",
+      "gitHint": "Metadata packů, náhledy a workflow jsou ve state/ — pro ty použijte git.",
+      "connected": "Připojeno",
+      "disconnected": "Odpojeno",
+      "usedSize": "využito {{size}}",
+      "freeSpace": "({{size}} volných)",
+      "autoBackup": "Automaticky zálohovat nové modely",
+      "autoBackupDesc": "Automaticky kopírovat nové modely do záložního úložiště",
+      "warnLastCopy": "Varovat před smazáním poslední kopie",
+      "warnLastCopyDesc": "Zobrazit varování při mazání modelu, který existuje pouze na jednom místě"
+    },
+    "tokens": {
+      "title": "API tokeny",
+      "subtitle": "Konfigurace API tokenů pro stahování modelů",
+      "civitai": "Civitai API token",
+      "civitaiPlaceholder": "Zadejte Civitai API token",
+      "civitaiLink": "Získejte token na civitai.com/user/account",
+      "huggingface": "HuggingFace token",
+      "huggingfacePlaceholder": "Zadejte HuggingFace token",
+      "huggingfaceLink": "Získejte token na huggingface.co/settings/tokens",
+      "configured": "Nakonfigurováno",
+      "notSet": "Nenastaveno"
+    },
+    "store": {
+      "title": "Konfigurace úložiště",
+      "subtitle": "Konfigurace cest Store v2 a UI cílů",
+      "root": "Kořen úložiště",
+      "rootDesc": "Umístění pro stav packů a data blobů",
+      "defaultUiSet": "Výchozí UI sada",
+      "uiPaths": "Cesty k instalacím UI",
+      "initStore": "Inicializovat úložiště",
+      "reInitStore": "Reinicializovat úložiště",
+      "initSuccess": "Úložiště úspěšně inicializováno",
+      "initFailed": "Inicializace selhala: {{error}}",
+      "initFailedGeneric": "Nepodařilo se inicializovat úložiště"
+    },
+    "diagnostics": {
+      "title": "Diagnostika",
+      "subtitle": "Kontrola stavu systému",
+      "run": "Spustit",
+      "comfyui": "ComfyUI",
+      "found": "Nalezeno",
+      "notFound": "Nenalezeno",
+      "packs": "Packy",
+      "installed": "Nainstalováno",
+      "customNodes": "Vlastní uzly",
+      "issues": "Problémy"
+    },
+    "save": "Uložit nastavení",
+    "saved": "Nastavení úspěšně uloženo",
+    "saveFailed": "Nepodařilo se uložit nastavení"
+  },
+  "profiles": {
+    "title": "Profily",
+    "subtitle": "Správa aktivních profilů a zobrazení stavu zásobníku pro jednotlivá UI",
+    "refresh": "Obnovit",
+    "activeProfiles": "Aktivní profily pro jednotlivá UI",
+    "active": "Aktivní",
+    "back": "Zpět",
+    "reset": "Resetovat",
+    "atGlobal": "Na globálním",
+    "stack": "Zásobník",
+    "noUiConfigs": "Nebyly nalezeny žádné konfigurace UI. Zkontrolujte nastavení úložiště.",
+    "shadowedFiles": "Překryté soubory",
+    "shadowedCount": "Překryté soubory ({{count}})",
+    "shadowedExplanation": "Překryté soubory vznikají, když více packů exportuje soubory na stejnou cestu. Použije se soubor \"vítězného\" packu, zatímco soubor \"překrytého\" packu je skryt.",
+    "updatesAvailable": "{{count}} pack má dostupné aktualizace",
+    "updatesAvailable_few": "{{count}} packy mají dostupné aktualizace",
+    "updatesAvailable_other": "{{count}} packů má dostupné aktualizace",
+    "viewPacks": "Zobrazit packy",
+    "table": {
+      "ui": "UI",
+      "filePath": "Cesta k souboru",
+      "winner": "Vítěz",
+      "shadowed": "Překrytý"
+    },
+    "error": {
+      "title": "Chyba při načítání profilů",
+      "retry": "Zkusit znovu"
+    },
+    "toast": {
+      "switchedTo": "Přepnuto na: {{profile}}",
+      "backFailed": "Návrat selhal: {{error}}",
+      "resetSuccess": "Resetováno na globální profil",
+      "resetFailed": "Reset selhal: {{error}}"
+    }
+  },
+  "inventory": {
+    "title": "Inventář",
+    "subtitle": "Správa úložiště modelů a záloh",
+    "refresh": "Obnovit",
+    "loading": "Načítání inventáře...",
+    "error": {
+      "title": "Chyba při načítání inventáře",
+      "loadFailed": "Nepodařilo se načíst inventář"
+    },
+    "toast": {
+      "backupSuccess": "Blob úspěšně zálohován",
+      "backupFailed": "Záloha selhala: {{error}}",
+      "restoreSuccess": "Blob úspěšně obnoven",
+      "restoreFailed": "Obnovení selhalo: {{error}}",
+      "deleteSuccess": "Blob úspěšně smazán",
+      "deleteFailed": "Smazání selhalo: {{error}}",
+      "bulkSuccess": "Hromadná akce {{action}} dokončena pro {{count}} blob(ů)",
+      "bulkFailed": "Hromadná akce selhala: {{error}}",
+      "doctorSuccess": "Doctor úspěšně dokončen",
+      "doctorFailed": "Doctor selhal"
+    },
+    "stats": {
+      "localStorage": "Lokální úložiště",
+      "modelFiles": "{{count}} modelových souborů",
+      "free": "{{size}} volných",
+      "used": "{{percent}}% využito",
+      "notBackedUp": "{{count}} modelů není zálohováno",
+      "blobStatus": "Stav blobů",
+      "referenced": "Využívané",
+      "orphan": "Osiřelé",
+      "backupOnly": "Pouze záloha",
+      "missing": "Chybějící",
+      "quickActions": "Rychlé akce",
+      "cleanup": "Vyčistit",
+      "cleanupTooltip": "Smazat modelové soubory, které nejsou využívány žádným packem. Uvolní místo na disku.",
+      "verify": "Ověřit",
+      "verifyTooltip": "Zkontrolovat, že všechny soubory odpovídají jejich SHA256 kontrolním součtům. Detekuje poškozené soubory.",
+      "doctor": "Doctor",
+      "doctorTooltip": "Skenovat a opravit problémy: opravit nefunkční odkazy, přebudovat indexy, optimalizovat databázi.",
+      "backup": "Zálohovat",
+      "backupTooltip": "Zkopírovat všechny lokální soubory do zálohovacího úložiště. Chrání před ztrátou dat.",
+      "backupNotConnected": "Zálohovací úložiště není připojeno. Nejprve připojte zálohovací disk.",
+      "allBackedUp": "Všechny modelové soubory jsou již zálohovány.",
+      "connected": "Připojeno",
+      "offline": "Offline",
+      "notEnabled": "Není povoleno",
+      "enableBackup": "Povolit zálohu",
+      "disconnected": "Odpojeno",
+      "connectDrive": "Připojte disk",
+      "modelFilesTitle": "Modelové soubory",
+      "synced": "Synchronizováno",
+      "pending": "Čeká",
+      "backupPending": "Zálohovat čekající",
+      "packData": "Data packů",
+      "localChanges": "Detekovány lokální změny",
+      "files": "{{count}} souborů",
+      "pendingCount": "({{count}} čeká)",
+      "local": "Lokální",
+      "modified": "Změněné",
+      "push": "Push",
+      "pull": "Pull",
+      "merge": "Sloučit",
+      "pushToBackup": "Push do zálohy",
+      "pullFromBackup": "Pull ze zálohy",
+      "mergeBothWays": "Sloučit oboustranně",
+      "pushMessage": "Toto zkopíruje {{count}} lokálních soubor(ů) do zálohovacího úložiště. Záložní soubory budou přepsány.",
+      "pullMessage": "Toto obnoví {{count}} soubor(ů) ze zálohy. Lokální soubory budou přepsány.",
+      "mergeMessage": "Toto synchronizuje všechny soubory oboustranně. Novější soubory přepíší starší na obou stranách.",
+      "syncedFiles": "Synchronizováno {{count}} soubor(ů)",
+      "syncFailed": "Synchronizace selhala: {{error}}",
+      "loading": "Načítání...",
+      "cancel": "Zrušit",
+      "confirm": "Potvrdit"
+    },
+    "filters": {
+      "search": "Hledat bloby...",
+      "kind": "Typ",
+      "status": "Stav",
+      "location": "Umístění",
+      "all": "Vše",
+      "kinds": {
+        "checkpoint": "Checkpoint",
+        "lora": "LoRA",
+        "embedding": "Embedding",
+        "vae": "VAE",
+        "controlnet": "ControlNet",
+        "upscaler": "Upscaler",
+        "preview": "Náhled",
+        "workflow": "Workflow",
+        "other": "Ostatní"
+      },
+      "statuses": {
+        "installed": "Nainstalováno",
+        "orphan": "Osiřelý",
+        "missing": "Chybí"
+      },
+      "locations": {
+        "local": "Pouze lokálně",
+        "backup": "Pouze záloha",
+        "both": "Oboje",
+        "missing": "Chybí"
+      }
+    },
+    "table": {
+      "name": "Název",
+      "type": "Typ",
+      "size": "Velikost",
+      "status": "Stav",
+      "location": "Umístění",
+      "usedBy": "Používá",
+      "actions": "Akce",
+      "noBlobs": "Žádné bloby nenalezeny",
+      "noMatch": "Žádné bloby neodpovídají filtrům",
+      "selected": "{{count}} vybráno",
+      "selectAll": "Vybrat vše",
+      "deselectAll": "Zrušit výběr",
+      "backup": "Zálohovat",
+      "restore": "Obnovit",
+      "delete": "Smazat",
+      "deleteLocal": "Smazat lokální",
+      "deleteBackup": "Smazat zálohu",
+      "deleteBoth": "Smazat oboje",
+      "showImpacts": "Zobrazit dopady",
+      "usedByPacks": "Používá {{count}} pack(ů)",
+      "notUsed": "Nepoužívá se"
+    },
+    "delete": {
+      "title": "Smazat blob?",
+      "titleLastCopy": "Smazat poslední kopii?",
+      "subtitleBoth": "Odstranit ze všech umístění",
+      "subtitleLocal": "Smazat lokálně",
+      "subtitleBackup": "Smazat ze zálohy",
+      "confirm": "Opravdu chcete smazat tento blob?",
+      "warning": "Tuto akci nelze vrátit zpět.",
+      "targetLocal": "Smazat z lokálního úložiště",
+      "targetBackup": "Smazat ze zálohovacího úložiště",
+      "targetBoth": "Smazat z obou umístění",
+      "lastCopyTitle": "Toto je JEDINÁ kopie tohoto modelu!",
+      "lastCopyDescription": "Smazáním dojde k trvalému odstranění.",
+      "lastCopyRedownload": "Budete muset znovu stáhnout z {{provider}}.",
+      "lastCopyWarning": "Toto je poslední kopie tohoto blobu!",
+      "usedByTitle": "Tento blob používá {{count}} pack(ů)",
+      "usedByWarning": "Tento blob používá {{count}} pack(ů)",
+      "andMore": "a {{count}} dalších",
+      "activeIn": "Aktivní v:",
+      "backupPreserved": "Záložní kopie bude zachována. Můžete ji později obnovit.",
+      "localPreserved": "Lokální kopie bude zachována.",
+      "local": "Lokální",
+      "backup": "Záloha",
+      "willDelete": "(bude smazáno)",
+      "deletePermanently": "Smazat trvale"
+    },
+    "cleanup": {
+      "title": "Vyčištění osiřelých blobů",
+      "subtitle": "Odstranit nepoužívané modely pro uvolnění místa na disku",
+      "description": "Odstranit bloby, které nejsou využívány žádným packem",
+      "steps": {
+        "scan": "Skenovat",
+        "review": "Zkontrolovat",
+        "complete": "Dokončeno"
+      },
+      "scanTitle": "Skenovat osiřelé bloby",
+      "scanDescription": "Toto prohledá vaše úložiště a najde bloby, které nejsou využívány žádným packem. Lze je bezpečně smazat pro uvolnění místa na disku.",
+      "scanning": "Skenování...",
+      "startScan": "Spustit sken",
+      "noOrphans": "Žádné osiřelé bloby",
+      "noOrphansDescription": "Vaše úložiště je čisté! Všechny bloby jsou využívány packy.",
+      "found": "Nalezeno {{count}} osiřelých blob(ů)",
+      "orphansFound": "Osiřelých blobů nalezeno",
+      "willFree": "Bude uvolněno",
+      "willFreeSize": "Uvolní se {{size}}",
+      "itemsToDelete": "Položky ke smazání ({{count}})",
+      "cleaningUp": "Čištění...",
+      "deletingOrphans": "Mazání {{count}} osiřelých blobů",
+      "complete": "Čištění dokončeno!",
+      "successMessage": "Úspěšně smazáno {{count}} osiřelých blobů",
+      "freed": "{{size}} uvolněno",
+      "someErrors": "Vyskytly se chyby:",
+      "execute": "Smazat {{count}} osiřelých",
+      "executing": "Mazání osiřelých blobů...",
+      "success": "Smazáno {{count}} osiřelých blob(ů)",
+      "cancel": "Zrušit",
+      "close": "Zavřít",
+      "scanFailed": "Skenování osiřelých selhalo",
+      "executeFailed": "Čištění osiřelých selhalo"
+    },
+    "sync": {
+      "titleToBackup": "Synchronizovat do zálohy",
+      "titleFromBackup": "Obnovit ze zálohy",
+      "description": "Synchronizovat bloby mezi lokálním a zálohovacím úložištěm",
+      "scanning": "Hledání chybějících blobů...",
+      "found": "Nalezeno {{count}} blob(ů) k synchronizaci",
+      "noMissing": "Všechny bloby jsou již synchronizovány",
+      "willTransfer": "Přenese se {{size}}",
+      "execute": "Zahájit synchronizaci",
+      "executing": "Synchronizace blobů...",
+      "success": "Synchronizováno {{count}} blob(ů)",
+      "cancel": "Zrušit"
+    },
+    "impacts": {
+      "title": "Analýza dopadů",
+      "loading": "Načítání analýzy dopadů...",
+      "error": "Nepodařilo se načíst analýzu dopadů",
+      "usedByPacks": "Používá packy",
+      "canDelete": "Lze bezpečně smazat",
+      "cannotDelete": "Nelze smazat (používá se)"
+    },
+    "verify": {
+      "title": "Ověření integrity",
+      "subtitle": "Zkontrolovat SHA256 kontrolní součty všech blobů",
+      "description": "Zkontrolovat všechny bloby na poškození dat",
+      "readyTitle": "Ověřit integritu blobů",
+      "readyDescription": "Toto vypočítá SHA256 kontrolní součty všech blobů a ověří, že se shodují. Pro velká úložiště to může chvíli trvat.",
+      "verifying": "Ověřování...",
+      "verifyingDescription": "Výpočet a kontrola SHA256 kontrolních součtů",
+      "running": "Ověřování blobů...",
+      "progress": "{{current}} / {{total}} ověřeno",
+      "allVerified": "Všechny bloby ověřeny!",
+      "verificationFailed": "Ověření selhalo",
+      "verified": "Ověřeno",
+      "failed": "Selhalo",
+      "sizeVerified": "{{size}} ověřeno",
+      "failedBlobs": "Selhavší bloby:",
+      "start": "Spustit ověření",
+      "error": "Ověření selhalo",
+      "success": "Všech {{count}} blob(ů) úspěšně ověřeno",
+      "viewErrors": "Zobrazit chyby"
+    }
   }
 }
