--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -231,11 +231,22 @@
     "required": "required"
   },
   "nav": {
-    "browse": "Browse",
+    "browse": "Browse Civitai",
     "packs": "Packs",
-    "inventory": "Model Inventory",
+    "inventory": "Inventory",
     "profiles": "Profiles",
-    "settings": "Settings"
+    "settings": "Settings",
+    "downloads": "Downloads"
+  },
+  "header": {
+    "tagline": "The Pack-First Model Manager",
+    "nsfw": "NSFW"
+  },
+  "sidebar": {
+    "expandSidebar": "Expand sidebar",
+    "collapseSidebar": "Collapse sidebar",
+    "allSystemsReady": "All systems ready",
+    "disconnected": "Disconnected"
   },
   "errors": {
     "loadFailed": "Failed to load",
@@ -243,5 +254,428 @@
     "deleteFailed": "Failed to delete",
     "networkError": "Network error",
     "notFound": "Not found"
+  },
+  "import": {
+    "title": "Import to Pack",
+    "packDetails": "Pack Details",
+    "packName": "Pack Name",
+    "customNameHint": "Custom name will be used for the pack",
+    "description": "Description",
+    "selectVersions": "Select Versions",
+    "selectAll": "Select All",
+    "deselectAll": "Deselect All",
+    "downloads": "{{num}} downloads",
+    "downloadOptions": "Download Options",
+    "downloadImages": "Download Images",
+    "downloadImagesDesc": "Save preview images (.jpg, .png)",
+    "downloadVideos": "Download Videos",
+    "downloadVideosDesc": "Save preview videos (.mp4)",
+    "includeNsfw": "Include NSFW",
+    "includeNsfwDesc": "Download mature content previews",
+    "downloadAllVersions": "Download from all versions",
+    "downloadAllVersionsDesc": "Get previews from all {{count}} versions",
+    "downloadSelectedVersionsDesc": "Get previews only from {{count}} selected version(s)",
+    "downloadSummary": "Download Summary",
+    "estimatedTotal": "Estimated Total",
+    "images": "Images",
+    "videos": "Videos",
+    "noPreviewsWarning": "No previews will be downloaded with current options",
+    "packThumbnail": "Pack Thumbnail",
+    "selectThumbnail": "Select a preview image to use as the pack thumbnail",
+    "versionsCount": "{{count}} version(s)",
+    "previewsCount": "{{count}} previews",
+    "selectVersionWarning": "Select at least one version to import",
+    "cancel": "Cancel",
+    "importing": "Importing...",
+    "importPack": "Import Pack"
+  },
+  "browse": {
+    "title": "Browse Civitai",
+    "subtitle": "Search and import models. Use <code>tag:</code> for tags.",
+    "searchPlaceholder": "Search models... (tag:anime, url:civitai.com/...)",
+    "search": "Search",
+    "loading": "Searching models...",
+    "loadingModel": "Loading model...",
+    "connectingTo": "Connecting to {{provider}}",
+    "noResults": "No models found for \"{{query}}\"",
+    "loadMore": "Load More ({{count}} loaded)",
+    "modelNotFound": "Model not found",
+    "copiedToClipboard": "Copied to clipboard",
+    "importSuccess": "Successfully imported '{{name}}'",
+    "importFailed": "Import failed",
+    "zoom": {
+      "smaller": "Smaller cards",
+      "larger": "Larger cards"
+    },
+    "types": {
+      "all": "All Types",
+      "lora": "LoRA",
+      "checkpoint": "Checkpoint",
+      "embedding": "Embedding",
+      "vae": "VAE",
+      "controlnet": "ControlNet",
+      "upscaler": "Upscaler"
+    },
+    "modal": {
+      "importToPack": "Import to Pack...",
+      "previewImages": "Preview Images ({{count}})",
+      "usageTips": "Usage Tips",
+      "triggerWords": "Trigger Words",
+      "versions": "Versions ({{count}})",
+      "description": "Description",
+      "tags": "Tags",
+      "downloads": "{{num}} downloads",
+      "ratings": "{{rating}} ({{num}} ratings)",
+      "viewOnCivitai": "View on Civitai",
+      "latest": "Latest"
+    },
+    "params": {
+      "clipSkip": "Clip Skip",
+      "strength": "Strength",
+      "cfgScale": "CFG Scale",
+      "steps": "Steps",
+      "sampler": "Sampler"
+    }
+  },
+  "settings": {
+    "title": "Settings",
+    "subtitle": "Configure Synapse settings and run diagnostics",
+    "display": {
+      "title": "Display",
+      "subtitle": "UI preferences",
+      "nsfwBlur": "NSFW Blur",
+      "nsfwBlurDesc": "Blur NSFW preview images by default"
+    },
+    "language": {
+      "title": "Language",
+      "subtitle": "Changes take effect immediately without restart."
+    },
+    "paths": {
+      "title": "Paths",
+      "subtitle": "Configure data storage location",
+      "synapseData": "Synapse Data Path",
+      "synapseDataDesc": "Read-only. Packs and registry are stored here."
+    },
+    "backup": {
+      "title": "Backup Storage",
+      "subtitle": "Configure external backup storage for models",
+      "enable": "Enable Backup Storage",
+      "enableDesc": "Store model copies on external drive (USB, NAS, network share)",
+      "path": "Backup Root Path",
+      "pathPlaceholder": "/mnt/usb/my-backup or /run/media/user/DRIVE or D:\\Backup",
+      "pathDesc": "Root folder on external drive. Synapse will create /.synapse/store/data/blobs/ inside.",
+      "gitHint": "Pack metadata, previews & workflows live in state/ — use git for those.",
+      "connected": "Connected",
+      "disconnected": "Disconnected",
+      "usedSize": "{{size}} used",
+      "freeSpace": "({{size}} free)",
+      "autoBackup": "Auto-backup new models",
+      "autoBackupDesc": "Automatically copy new models to backup storage",
+      "warnLastCopy": "Warn before deleting last copy",
+      "warnLastCopyDesc": "Show warning when deleting a model that exists only in one location"
+    },
+    "tokens": {
+      "title": "API Tokens",
+      "subtitle": "Configure API tokens for model downloads",
+      "civitai": "Civitai API Token",
+      "civitaiPlaceholder": "Enter Civitai API token",
+      "civitaiLink": "Get your token from civitai.com/user/account",
+      "huggingface": "HuggingFace Token",
+      "huggingfacePlaceholder": "Enter HuggingFace token",
+      "huggingfaceLink": "Get your token from huggingface.co/settings/tokens",
+      "configured": "Configured",
+      "notSet": "Not set"
+    },
+    "store": {
+      "title": "Store Configuration",
+      "subtitle": "Configure Store v2 paths and UI targets",
+      "root": "Store Root",
+      "rootDesc": "Location for pack state and blob data",
+      "defaultUiSet": "Default UI Set",
+      "uiPaths": "UI Installation Paths",
+      "initStore": "Init Store",
+      "reInitStore": "Re-init Store",
+      "initSuccess": "Store initialized successfully",
+      "initFailed": "Init failed: {{error}}",
+      "initFailedGeneric": "Failed to initialize store"
+    },
+    "diagnostics": {
+      "title": "Diagnostics",
+      "subtitle": "System health check",
+      "run": "Run",
+      "comfyui": "ComfyUI",
+      "found": "Found",
+      "notFound": "Not found",
+      "packs": "Packs",
+      "installed": "Installed",
+      "customNodes": "Custom Nodes",
+      "issues": "Issues"
+    },
+    "save": "Save Settings",
+    "saved": "Settings saved successfully",
+    "saveFailed": "Failed to save settings"
+  },
+  "profiles": {
+    "title": "Profiles",
+    "subtitle": "Manage active profiles and view stack state per UI",
+    "refresh": "Refresh",
+    "activeProfiles": "Active Profiles per UI",
+    "active": "Active",
+    "back": "Back",
+    "reset": "Reset",
+    "atGlobal": "At Global",
+    "stack": "Stack",
+    "noUiConfigs": "No UI configurations found. Check Store settings.",
+    "shadowedFiles": "Shadowed Files",
+    "shadowedCount": "Shadowed Files ({{count}})",
+    "shadowedExplanation": "Shadowed files occur when multiple packs expose files to the same path. The \"winner\" pack's file is used, while the \"shadowed\" pack's file is hidden.",
+    "updatesAvailable": "{{count}} pack with updates available",
+    "updatesAvailable_other": "{{count}} packs with updates available",
+    "viewPacks": "View Packs",
+    "table": {
+      "ui": "UI",
+      "filePath": "File Path",
+      "winner": "Winner",
+      "shadowed": "Shadowed"
+    },
+    "error": {
+      "title": "Error Loading Profiles",
+      "retry": "Retry"
+    },
+    "toast": {
+      "switchedTo": "Switched to: {{profile}}",
+      "backFailed": "Back failed: {{error}}",
+      "resetSuccess": "Reset to global profile",
+      "resetFailed": "Reset failed: {{error}}"
+    }
+  },
+  "inventory": {
+    "title": "Inventory",
+    "subtitle": "Manage your model storage and backups",
+    "refresh": "Refresh",
+    "loading": "Loading inventory...",
+    "error": {
+      "title": "Error loading inventory",
+      "loadFailed": "Failed to load inventory"
+    },
+    "toast": {
+      "backupSuccess": "Blob backed up successfully",
+      "backupFailed": "Backup failed: {{error}}",
+      "restoreSuccess": "Blob restored successfully",
+      "restoreFailed": "Restore failed: {{error}}",
+      "deleteSuccess": "Blob deleted successfully",
+      "deleteFailed": "Delete failed: {{error}}",
+      "bulkSuccess": "Bulk {{action}} completed for {{count}} blob(s)",
+      "bulkFailed": "Bulk action failed: {{error}}",
+      "doctorSuccess": "Doctor completed successfully",
+      "doctorFailed": "Doctor failed"
+    },
+    "stats": {
+      "localStorage": "Local Storage",
+      "modelFiles": "{{count}} model files",
+      "free": "{{size}} free",
+      "used": "{{percent}}% used",
+      "notBackedUp": "{{count}} models not backed up",
+      "blobStatus": "Blob Status",
+      "referenced": "Referenced",
+      "orphan": "Orphan",
+      "backupOnly": "Backup Only",
+      "missing": "Missing",
+      "quickActions": "Quick Actions",
+      "cleanup": "Cleanup",
+      "cleanupTooltip": "Delete model files that are no longer referenced by any pack. Frees up disk space.",
+      "verify": "Verify",
+      "verifyTooltip": "Check all files match their SHA256 checksums. Detects corrupted files.",
+      "doctor": "Doctor",
+      "doctorTooltip": "Scan and repair issues: fix broken references, rebuild indexes, optimize database.",
+      "backup": "Backup",
+      "backupTooltip": "Copy all local-only model files to backup storage. Protects against data loss.",
+      "backupNotConnected": "Backup storage not connected. Connect your backup drive first.",
+      "allBackedUp": "All model files are already backed up.",
+      "connected": "Connected",
+      "offline": "Offline",
+      "notEnabled": "Not enabled",
+      "enableBackup": "Enable Backup",
+      "disconnected": "Disconnected",
+      "connectDrive": "Connect your drive",
+      "modelFilesTitle": "Model Files",
+      "synced": "Synced",
+      "pending": "Pending",
+      "backupPending": "Backup Pending",
+      "packData": "Pack Data",
+      "localChanges": "Local changes detected",
+      "files": "{{count}} files",
+      "pendingCount": "({{count}} pending)",
+      "local": "Local",
+      "modified": "Modified",
+      "push": "Push",
+      "pull": "Pull",
+      "merge": "Merge",
+      "pushToBackup": "Push to Backup",
+      "pullFromBackup": "Pull from Backup",
+      "mergeBothWays": "Merge Both Ways",
+      "pushMessage": "This will copy {{count}} local file(s) to backup storage. Backup files will be overwritten.",
+      "pullMessage": "This will restore {{count}} file(s) from backup. Local files will be overwritten.",
+      "mergeMessage": "This will sync all files bidirectionally. Newer files will overwrite older ones on both sides.",
+      "syncedFiles": "Synced {{count}} file(s)",
+      "syncFailed": "Sync failed: {{error}}",
+      "loading": "Loading...",
+      "cancel": "Cancel",
+      "confirm": "Confirm"
+    },
+    "filters": {
+      "search": "Search blobs...",
+      "kind": "Kind",
+      "status": "Status",
+      "location": "Location",
+      "all": "All",
+      "kinds": {
+        "checkpoint": "Checkpoint",
+        "lora": "LoRA",
+        "embedding": "Embedding",
+        "vae": "VAE",
+        "controlnet": "ControlNet",
+        "upscaler": "Upscaler",
+        "preview": "Preview",
+        "workflow": "Workflow",
+        "other": "Other"
+      },
+      "statuses": {
+        "installed": "Installed",
+        "orphan": "Orphan",
+        "missing": "Missing"
+      },
+      "locations": {
+        "local": "Local Only",
+        "backup": "Backup Only",
+        "both": "Both",
+        "missing": "Missing"
+      }
+    },
+    "table": {
+      "name": "Name",
+      "type": "Type",
+      "size": "Size",
+      "status": "Status",
+      "location": "Location",
+      "usedBy": "Used By",
+      "actions": "Actions",
+      "noBlobs": "No blobs found",
+      "noMatch": "No blobs match your filters",
+      "selected": "{{count}} selected",
+      "selectAll": "Select all",
+      "deselectAll": "Deselect all",
+      "backup": "Backup",
+      "restore": "Restore",
+      "delete": "Delete",
+      "deleteLocal": "Delete Local",
+      "deleteBackup": "Delete Backup",
+      "deleteBoth": "Delete Both",
+      "showImpacts": "Show Impacts",
+      "usedByPacks": "Used by {{count}} pack(s)",
+      "notUsed": "Not used"
+    },
+    "delete": {
+      "title": "Delete Blob?",
+      "titleLastCopy": "Delete Last Copy?",
+      "subtitleBoth": "Remove from all locations",
+      "subtitleLocal": "Delete from local",
+      "subtitleBackup": "Delete from backup",
+      "confirm": "Are you sure you want to delete this blob?",
+      "warning": "This action cannot be undone.",
+      "targetLocal": "Delete from local storage",
+      "targetBackup": "Delete from backup storage",
+      "targetBoth": "Delete from both locations",
+      "lastCopyTitle": "This is the ONLY copy of this model!",
+      "lastCopyDescription": "Deleting it will permanently remove it.",
+      "lastCopyRedownload": "You'll need to re-download from {{provider}}.",
+      "lastCopyWarning": "This is the last copy of this blob!",
+      "usedByTitle": "This blob is used by {{count}} pack(s)",
+      "usedByWarning": "This blob is used by {{count}} pack(s)",
+      "andMore": "and {{count}} more",
+      "activeIn": "Active in:",
+      "backupPreserved": "Backup copy will be preserved. You can restore later.",
+      "localPreserved": "Local copy will be preserved.",
+      "local": "Local",
+      "backup": "Backup",
+      "willDelete": "(will delete)",
+      "deletePermanently": "Delete Permanently"
+    },
+    "cleanup": {
+      "title": "Cleanup Orphan Blobs",
+      "subtitle": "Remove unreferenced models to free disk space",
+      "description": "Remove blobs that are not referenced by any pack",
+      "steps": {
+        "scan": "Scan",
+        "review": "Review",
+        "complete": "Complete"
+      },
+      "scanTitle": "Scan for Orphan Blobs",
+      "scanDescription": "This will scan your storage for blobs that are not referenced by any pack. They can be safely deleted to free disk space.",
+      "scanning": "Scanning...",
+      "startScan": "Start Scan",
+      "noOrphans": "No Orphans Found",
+      "noOrphansDescription": "Your storage is clean! All blobs are referenced by packs.",
+      "found": "Found {{count}} orphan blob(s)",
+      "orphansFound": "Orphan blobs found",
+      "willFree": "Will be freed",
+      "willFreeSize": "This will free {{size}}",
+      "itemsToDelete": "Items to delete ({{count}})",
+      "cleaningUp": "Cleaning Up...",
+      "deletingOrphans": "Deleting {{count}} orphan blobs",
+      "complete": "Cleanup Complete!",
+      "successMessage": "Successfully deleted {{count}} orphan blobs",
+      "freed": "{{size}} freed",
+      "someErrors": "Some errors occurred:",
+      "execute": "Delete {{count}} Orphans",
+      "executing": "Deleting orphan blobs...",
+      "success": "Deleted {{count}} orphan blob(s)",
+      "cancel": "Cancel",
+      "close": "Close",
+      "scanFailed": "Failed to scan for orphans",
+      "executeFailed": "Failed to cleanup orphans"
+    },
+    "sync": {
+      "titleToBackup": "Sync to Backup",
+      "titleFromBackup": "Restore from Backup",
+      "description": "Synchronize blobs between local and backup storage",
+      "scanning": "Scanning for missing blobs...",
+      "found": "Found {{count}} blob(s) to sync",
+      "noMissing": "All blobs are already synced",
+      "willTransfer": "Will transfer {{size}}",
+      "execute": "Start Sync",
+      "executing": "Syncing blobs...",
+      "success": "Synced {{count}} blob(s)",
+      "cancel": "Cancel"
+    },
+    "impacts": {
+      "title": "Impact Analysis",
+      "loading": "Loading impact analysis...",
+      "error": "Failed to load impact analysis",
+      "usedByPacks": "Used by Packs",
+      "canDelete": "Can be safely deleted",
+      "cannotDelete": "Cannot be deleted (in use)"
+    },
+    "verify": {
+      "title": "Verify Integrity",
+      "subtitle": "Check SHA256 checksums of all blobs",
+      "description": "Check all blobs for data corruption",
+      "readyTitle": "Verify Blob Integrity",
+      "readyDescription": "This will compute SHA256 checksums for all blobs and verify they match. This may take a while for large storage.",
+      "verifying": "Verifying...",
+      "verifyingDescription": "Computing and checking SHA256 checksums",
+      "running": "Verifying blobs...",
+      "progress": "{{current}} / {{total}} verified",
+      "allVerified": "All Blobs Verified!",
+      "verificationFailed": "Verification Failed",
+      "verified": "Verified",
+      "failed": "Failed",
+      "sizeVerified": "{{size}} verified",
+      "failedBlobs": "Failed blobs:",
+      "start": "Start Verification",
+      "error": "Verification failed",
+      "success": "All {{count}} blob(s) verified successfully",
+      "viewErrors": "View Errors"
+    }
   }
 }
